@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-08T01:27:28Z",
+  "timestamp" : "2022-07-08T08:21:20Z",
   "count_outdated" : 375,
   "uniques_outdated" : 216,
   "count" : 406,
-  "uniques" : 233,
+  "uniques" : 234,
   "clones" : [
     {
       "timestamp": "2022-06-24T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-07-07T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
